Correçao de erros

--- a/sections/4-solucao-desenvolvida.tex
+++ b/sections/4-solucao-desenvolvida.tex
@@ -26,7 +26,7 @@ A figura 3, apresenta uma visão geral dos principais pacotes e arquivos da arqu
 	\item[4] \textit{src}: Diretório de código fonte. É onde está as classes c++ e componentes QML usados internamente e dispostas pelos plugins como componentes reusáveis. Esse diretório é sub-dividido em outros 5 diretórios detalhados em outro diagrama. As classes contidas nesse diretório são mapeadas no arquivo \textit{tcc.pro}.
 	\item[5] \textit{plugins}: Diretório de plugins. Cada plugin deve obrigatóriamente estar em um sub-diretório com no mínimo um arquivo de configuração de nome \textit{config.json} e os arquivos QML e imagens que necessitar para o seu funcionamento. Os detalhes das propriedades requeridas para carregamento do plugin serão descritas em um tópico posterior.
 	\item[6] \textit{translations}: Diretório contendo os arquivos de tradução. Os arquivos de tradução devem ser gerados antes de cada release do aplicativo caso haja alterações nas strings exibidas para o usuário. Um arquivo de resources \textit{translations.qrc} existe neste diretório e deve ser utilizado para mapear os idiomas suportados pelo aplicativo. Cada arquivo de tradução deve ser nomeado seguindo o padrão idioma_PAÌS com a extensão \textit{.ts}, por exemplo: pt_BR.ts. Ao iniciar a aplicação, no arquivo main.cpp, será identificado o \textit{locale} que define o idioma utilizado no dispositivo e o arquivo correspondente será instanciado e as strings serão traduzidas seguindo a disposição definida no arquivo traduzido. Para regenerar as traduções, deve-se utilizar o comando \textit{lupdate *.pro} para criar o atualizar o arquivo \textit{.ts}.
-	\itrem[7] \textit{android}: Diretório contendo os arquivos de configuração do aplicativo para a plataforma android. Outros sub-diretórios guardam arquivos do gradle utilizados para o build do APK, ícones do lançador do aplicativo e classes java, além de uma versão da lib \textit{openssl} compilada para o funcionamento de requisições HTTP.
+	\item[7] \textit{android}: Diretório contendo os arquivos de configuração do aplicativo para a plataforma android. Outros sub-diretórios guardam arquivos do gradle utilizados para o build do APK, ícones do lançador do aplicativo e classes java, além de uma versão da lib \textit{openssl} compilada para o funcionamento de requisições HTTP.
 	\item[8] \textit{assets}: Diretório contendo imagens e arquivos de configuração do \textit{qtquickcontrols2} além de um arquivo html que pode ser usado para exibir os termos de uso do aplicativo caso necessário. Um arquivo de \textit{resources} \textit{assets.qrc} mapeia todos os arquivos contidos neste diretório e pode ser usado para empacotar outros componentes e imagens do usuário no aplicativo.
 	\item[9] \textit{ios}: Diretório contendo os arquivos de configuração do aplicativo para a plataforma ios. 
 \end{description}
